--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <title></title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -38,7 +37,67 @@
             </li>
         </ul>
     </div>
+    <section class="body">
+        <div class="list">
+            <ul class="nav">
+                <li>
+                    <a class="a" href="##">
+                        <i class="fa">
+                            <b class="bg-sucess">
+                                
+                            </b>
+                        </i>
+                        <span>个人中心</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="a" href="##">
+                        <i class="fa">
+                            <b class="bg-sucess"></b>
+                        </i>
+                        <span>账户信息</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="a" href="##">
+                        <i class="fa">
+                            <b class="bg-sucess"> </b>
+                        </i>
+                        <span>博客</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="a" href="##">
+                        <i class="fa">
+                            <b class="bg-sucess"> </b>
+                        </i>
+                        <span>用户组</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
 
+    <script>
+        var a = document.getElementsByClassName("a");
+        var i = document.getElementsByClassName("fa");
+
+        for (var i = 0; i < 3; i++) {
+            (function(num) {
+                a[i].addEventListener("mouseover", function() {
+                    a[i].style.background = "#f5f5f5";
+                    i[i].style.background = "#8ec165";
+                    i[i].style.color = "#fff";
+                });
+                a[i].addEventListener("mouseout", function() {
+                    a[i].style.background = "white";
+                    i[i].style.background = "white";
+                    i[i].style.color = "#a4a4a4";
+                })
+            })(i)
+
+        }
+    </script>
 </body>
 
 </html>
